# nnpde-cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  plot.ipynb
cmake/: zero.cmake
include/: burgers_exact.hpp  constants.hpp  error_and_order.hpp  export_to_file.hpp  legendre_polys.hpp  limiter.hpp  linespace.hpp  period_index.hpp  weno5.hpp
include/solver/: expected.hpp  preset.hpp  requires.h  solver  solver_crtp.hpp  solver_deducing.hpp  solver_stdfunc.hpp  solver_template.hpp  solver_virtual.hpp
src/: CMakeLists.txt
src/DG-RK3/: CMakeLists.txt  config.hpp  dg_rk3_c.cpp  dg_rk3_v.cpp  dg_test.hpp
src/FD-RK3-WENO5/: CMakeLists.txt  fd_rk3_weno5_c.cpp  fd_rk3_weno5_v.cpp  fd_test.hpp
src/FV-Euler-Godunov/: CMakeLists.txt  fv_godunov_c.cpp  fv_godunov_f.cpp  fv_godunov_n.cpp  fv_godunov_p.cpp  fv_godunov_v.cpp  fv_test.hpp
src/FV-RK3-WENO5/: CMakeLists.txt  fv_rk3_weno5_c.cpp  fv_rk3_weno5_v.cpp  fv_test.hpp
